<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_available_orders"
        android:enabled="true"
        android:icon="@drawable/ic_available_orders_24"
        android:title="@string/title_available_orders" />
    <item
        android:id="@+id/navigation_active_orders"
        android:enabled="true"
        android:icon="@drawable/ic_active_orders_24"
        android:title="@string/title_active_orders" />

    <item
        android:id="@+id/navigation_order_history"
        android:enabled="true"
        android:icon="@drawable/ic_order_history_24"
        android:title="@string/title_order_history" />

    <item
        android:id="@+id/navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_face_24"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />
</menu>