<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_stock_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="16dp">

    <TextView
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_item_id"
        android:textStyle="bold"
        tools:text="Order №2" />

    <TextView
        android:id="@+id/order_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_id"
        android:layout_marginTop="4dp"
        tools:text="Грибоедова улица, 13" />

    <ImageButton
        android:id="@+id/location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/order_address"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:src="@drawable/ic_location_on_24"
        tools:text="NYQ" />

    <TextView
        android:id="@+id/order_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/location_btn"
        android:layout_toEndOf="@+id/order_id"
        android:text="@string/rating_text" />

    <TextView
        android:id="@+id/courier_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_rating"
        android:layout_alignStart="@+id/order_rating"
        android:layout_alignEnd="@+id/order_rating"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:text="@string/courier_reward_text" />

</RelativeLayout>