<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.order.available.AvailableOrderDetailsFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Client"
        app:layout_constraintEnd_toEndOf="@+id/products_recycler_view"
        app:layout_constraintStart_toStartOf="@+id/products_recycler_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_phone_hint"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Address"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tel_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/client_text_view"
        app:layout_constraintStart_toStartOf="@+id/client_text_view"
        app:layout_constraintTop_toBottomOf="@+id/client_text_view"
        tools:text="+79877227358" />

    <TextView
        android:id="@+id/client_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/order_description_text_view"
        app:layout_constraintStart_toStartOf="@+id/order_description_text_view"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Кирилл Манеркин" />

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/client_text_view"
        app:layout_constraintStart_toStartOf="@+id/client_text_view"
        app:layout_constraintTop_toBottomOf="@+id/tel_text_view"
        tools:text="ул. Грибоедова" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Order Description"
        app:layout_constraintEnd_toEndOf="@+id/order_description_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/order_description_text_view"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Products"
        app:layout_constraintEnd_toEndOf="@+id/products_recycler_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/products_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/products_recycler_view"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/order_description_text_view"
        android:layout_width="175dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/products_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/products_recycler_view"
        app:layout_constraintTop_toTopOf="@+id/products_recycler_view"
        tools:text="Привезти к 7 вечера" />

    <TextView
        android:id="@+id/courier_reward_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/courier_reward_text"
        app:layout_constraintEnd_toEndOf="@+id/order_description_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/products_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/products_recycler_view" />

    <TextView
        android:id="@+id/rating_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rating_text"
        app:layout_constraintEnd_toEndOf="@+id/courier_reward_text_view"
        app:layout_constraintStart_toStartOf="@+id/courier_reward_text_view"
        app:layout_constraintTop_toBottomOf="@+id/courier_reward_text_view" />

    <Button
        android:id="@+id/complete_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/complete_button_text"
        app:layout_constraintEnd_toStartOf="@+id/cancel_order_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/products_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/rating_tv" />

    <Button
        android:id="@+id/cancel_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_the_order_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/complete_order_button"
        app:layout_constraintEnd_toEndOf="@+id/order_description_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/complete_order_button"
        app:layout_constraintTop_toTopOf="@+id/complete_order_button" />

</androidx.constraintlayout.widget.ConstraintLayout>